quarkus-app-manifests/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api
