quarkus-app-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-service
  namespace: default
  labels:
    app: quarkus-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: quarkus-app
